--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,13 @@
   <build>
     <finalName>test-hello-world</finalName>
   </build>
+  <distributionManagement>
+    <repository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>test-app</id>
+      <name>Test Local Repository</name>
+      <url>file:///D:/test/</url>
+      <layout>default</layout>
+    </repository>
+  </distributionManagement>
 </project>
